footer gap fixed

--- a/wp-content/uploads/sites/231/elementor/css/post-231195.css
+++ b/wp-content/uploads/sites/231/elementor/css/post-231195.css
@@ -17,7 +17,7 @@
     --gap: 32px;
     --background-transition: 0.3s;
     --padding-top: 0%;
-    --padding-right: 10%;
+    --padding-right: 13%!important;
     --padding-bottom: 0%;
     --padding-left: 0%
 }
